# rp4os

./: Cargo.toml  README.md  build.sh  connect.sh  shell.nix
boot_console/: Cargo.toml
boot_console/src/: main.rs
kernel/: boot.rs  boot.s  kernel.ld  main.rs
kernelloader/: boot.rs  boot.s  kernel_loader.ld  main.rs
scripts/: build.sh  build_loader.sh  run_qemu.sh
src/: driver.rs  exception.rs  exception_level.rs  lib.rs  main.rs  panic.rs  print.rs  priv_level.rs  state.rs  synchronization.rs  time.rs
src/arch/aarch64/: exception.rs  exception_level.rs  priv_level.rs  time.rs
src/arch/aarch64/cpu/: boot.s  cpu.rs  smp.rs
src/arch/aarch64/exception/: exception.s  mod.rs  vector.rs
src/arch/aarch64/mmu/: mod.rs  translation_table.rs
src/bsp/: console.rs  driver.rs  execption.rs  kernel.ld  memory.rs  mod.rs
src/bsp/drivers/: bcm2xxx_gpio.rs  bcm2xxx_pl011.rs  common.rs  mod.rs
src/bsp/drivers/gicv2/: gicc.rs  gicd.rs  mod.rs
src/bsp/memory/: mmu.rs  mod.rs
src/console/: mod.rs  null_console.rs
src/cpu/: mod.rs  smp.rs
src/exception/: asynchronous.rs  mod.rs  null_irq_manager.rs
src/memory/: heap_alloc.rs  mod.rs
src/memory/mmu/: mapping_record.rs  mod.rs  page_alloc.rs  translation_table.rs
src/mmu/: mod.rs  translation_table.rs
translation_table/: Cargo.toml
translation_table/src/: main.rs
