[package]
name = "rp4_os"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
