[package]
name = "rp4os"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[features]
default = []
kernel = []
kernelloader = []

[[bin]]
name = "kernel"
path = "kernel/main.rs"
required-features = ["kernel"]

[[bin]]
name = "kernelloader"
path = "kernelloader/main.rs"
required-features = ["kernelloader"]

[dependencies]
tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = { version = "9.x.x" }
